// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adminDeleteIssue emits delete issue on success 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "deleted": true,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "deleted": true,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "DELETED_ISSUE",
    },
  ],
]
`;

exports[`adminDeleteIssue emits delete issue on success 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": undefined,
      "type": "DISABLE_VOTING",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "deleted": true,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "deleted": true,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "DELETED_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits close issue action and disables voting 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits close issue action and disables voting 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": undefined,
      "type": "DISABLE_VOTING",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits close issue action and disables voting 3`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits error when it fails 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Closing issue failed",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`closeIssue emits winner when issue only shows winner 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": true,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits winner when issue only shows winner 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": undefined,
      "type": "DISABLE_VOTING",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": true,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {},
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits winner when issue only shows winner 3`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "1",
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": true,
        "toObject": [Function],
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`createIssue emits OPEN_ISSUE action creates issue 1`] = `
Array [
  Array [
    "action",
    Object {
      "action": "open",
      "data": Object {
        "_id": "1",
        "active": true,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
      },
      "type": "OPEN_ISSUE",
    },
  ],
]
`;

exports[`createIssue emits OPEN_ISSUE action creates issue 2`] = `
Array [
  Array [
    "action",
    Object {
      "action": "open",
      "data": Object {
        "_id": "1",
        "active": true,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "genfors": "1",
        "secret": false,
        "showOnlyWinner": false,
        "toObject": [Function],
        "voteDemand": "regular",
      },
      "type": "OPEN_ISSUE",
    },
  ],
  Array [
    "action",
    Object {
      "data": undefined,
      "type": "ENABLE_VOTING",
    },
  ],
]
`;

exports[`createIssue emits an error when it fails 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Adding new question failed",
      },
      "type": "ERROR",
    },
  ],
]
`;
